--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="mealApp">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +9,11 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/mealApp.css" rel="stylesheet" />
+      <script src="lib/angular.min.js"></script>  
+      <script src="lib/angular-route.min.js"></script>  
+      <script src="js/app.js"></script>  
+      <script src="js/controllers/baseCtrls.js"></script>  
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,9 +22,41 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
-    <h1>Meal Token</h1>
+  <body ng-controller="mainCtrl">
+      <div class="container">
+            <nav class="navbar navbar-default">
+              <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="#">Meal Token</a>
+                </div>
 
-  
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  
+                  <ul class="nav navbar-nav navbar-right">
+
+                      <li><a href="#/dashboard">Dash Board</a></li>
+                      <li><a href="#">Masters</a></li>
+                      <li><a href="#">Actions</a></li>
+                      <li><a href="#">Reports</a></li>
+                      <li><a href="#">Log out</a></li>
+                  </ul>
+                </div><!-- /.navbar-collapse -->
+              </div><!-- /.container-fluid -->
+            </nav>
+          <div class="row">
+              <div class="col-sx-12">
+              hi {{name}},
+              </div>
+              <ng-view></ng-view>
+          </div>
+      </div>
   </body>
 </html>
