Added dynamic route control

--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,9 @@
                   <ul class="nav navbar-nav navbar-right">
 
                       <li><a href="#/dashboard">Dash Board</a></li>
-                      <li><a href="#">Masters</a></li>
-                      <li><a href="#">Actions</a></li>
-                      <li><a href="#">Reports</a></li>
+                      <li><a href="#/menu/master">Masters</a></li>
+                      <li><a href="#/menu/action">Actions</a></li>
+                      <li><a href="#/menu/reports">Reports</a></li>
                       <li><a href="#">Log out</a></li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
