--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
       <script src="lib/angular-route.min.js"></script>  
       <script src="js/app.js"></script>  
       <script src="js/controllers/baseCtrls.js"></script>  
+      <script src="js/controllers/masterCtrls.js"></script>  
+      <script src="js/controllers/actionCtrls.js"></script>  
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
