--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       <script src="lib/angular.min.js"></script>  
       <script src="lib/angular-route.min.js"></script>  
       <script src="js/app.js"></script>  
+      <script src="js/service.js"></script>  
       <script src="js/controllers/baseCtrls.js"></script>  
       <script src="js/controllers/masterCtrls.js"></script>  
       <script src="js/controllers/actionCtrls.js"></script>  
