Token and Reports added

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       <script src="js/controllers/baseCtrls.js"></script>  
       <script src="js/controllers/masterCtrls.js"></script>  
       <script src="js/controllers/actionCtrls.js"></script>  
+      <script src="js/controllers/reportCtrls.js"></script>  
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
